--- a/site/requisitosF-NF/index.html
+++ b/site/requisitosF-NF/index.html
@@ -555,7 +555,7 @@
 <tr>
 <td><b>[TM01]</b> Usabilidade da Interface</td>
 <td><b>[EP01]</b> Interface fácil de navegar</td>
-<td><b>[US01]</b> Eu, como funcionário, quero uma barra de busca para achar produtos específicos mais rapidamente.<br><b>[US02]</b> Eu, como funcionário, quero que os itens estejam separados por categoria, para organizar e também facilitar buscas.<br><b>[US03] </b>Eu, como usuário, quero ter um layout claro e organizado para utilizar as funcionalidades com facilidade e rapidez.<br></td>
+<td><b>[US01]</b> Eu, como usuário, quero uma barra de busca para achar produtos específicos mais rapidamente.<br><b>[US02]</b> Eu, como usuário, quero que os itens estejam separados por categoria, para organizar e também facilitar buscas.<br><b>[US03] </b>Eu, como usuário, quero ter um layout claro e organizado para utilizar as funcionalidades com facilidade e rapidez.<br></td>
 </tr>
 <tr>
 <td><b>[TM02]</b> Gerenciamento de produtos</td>
@@ -565,12 +565,12 @@
 <tr>
 <td><b>[TM02]</b> Gerenciamento de produtos</td>
 <td><b>[EP03]</b> Adicionar ou remover produtos</td>
-<td><b>[US08]</b> Eu, como gerente, quero poder adicionar ou remover novos produtos no sistema para atualizar o catálogo.<br><b>[US09]</b> Eu, como funcionário, quero ser capaz de registrar produtos através dos códigos de barra para agilizar o processo de atualização do produto.<br><b>[US10]</b> Eu, como um gerente gostaria de um alerta de estoque baixo, para poder repor o produto.</td>
+<td><b>[US08]</b> Eu, como usuário, quero poder adicionar ou remover novos produtos no sistema para atualizar o catálogo.<br><b>[US09]</b> Eu, como usuário, quero ser capaz de registrar produtos através dos códigos de barra para agilizar o processo de atualização do produto.<br><b>[US10]</b> Eu, como um usuário gostaria de um alerta de estoque baixo, para poder repor o produto.</td>
 </tr>
 <tr>
 <td><b>[TM03]</b> Gerenciamento de vendas</td>
 <td><b>[EP04]</b> Geração de relatórios de vendas</td>
-<td><b>[US11]</b> Eu, como gerente, quero ser capaz de gerar um gráfico de linhas, para observar melhor o fluxo de vendas de produtos específicos e identificar tendências e padrões.<br><b>[US12]</b> Eu, como gerente, quero ser capaz de gerar um gráfico de pizza, para identificar a participação de cada categoria nas vendas totais.<br><b>[US13]</b> Eu, como gerente, quero ser capaz de gerar um gráfico de barras, para comparar as vendas de diferentes produtos.</td>
+<td><b>[US11]</b> Eu, como usuário, quero ser capaz de gerar um gráfico de linhas, para observar melhor o fluxo de vendas de produtos específicos e identificar tendências e padrões.<br><b>[US12]</b> Eu, como usuário, quero ser capaz de gerar um gráfico de pizza, para identificar a participação de cada categoria nas vendas totais.<br><b>[US13]</b> Eu, como usuário, quero ser capaz de gerar um gráfico de barras, para comparar as vendas de diferentes produtos.</td>
 </tr>
 </tbody>
 </table>
