--- a/site/processo-de-desenvolvimento-de-software/index.html
+++ b/site/processo-de-desenvolvimento-de-software/index.html
@@ -781,6 +781,7 @@ Scrum XP combina as metodologias Scrum e Extreme Programming(XP). Scrum é uma a
 </tr>
 </tbody>
 </table>
+<p><img alt="Scrum" src="https://github.com/mdsreq-fga-unb/2023.1-EasyStock/assets/88113694/464633d4-a0cf-406c-9bbb-428421797374" /></p>
 <h2 id="praticas-utilizadas-do-xp">Práticas utilizadas do XP</h2>
 <table>
 <thead>
