atualizando mvp1 e mvp2

--- a/site/mvp1-mvp2/index.html
+++ b/site/mvp1-mvp2/index.html
@@ -691,6 +691,12 @@
 <td>Criação dos escopos do MVP1 e MVP2</td>
 <td>Milena</td>
 </tr>
+<tr>
+<td>31/05/2023</td>
+<td>0.6</td>
+<td>Revisao do MVP1 e MVP2</td>
+<td>Gustavo, Hemanoel</td>
+</tr>
 </tbody>
 </table>
 <h2 id="mvp-1">MVP 1</h2>
@@ -714,6 +720,10 @@
 <td>Eu, como usuário, quero consultar o nível de estoque dos produtos, para saber a disponibilidade do produto.</td>
 </tr>
 <tr>
+<td><b>[US07]</b></td>
+<td>Eu, como gerente, quero ser capaz de visualizar o estoque total da loja em tempo real, para ter uma visão atualizada sobre os produtos.</td>
+</tr>
+<tr>
 <td><b>[US03]</b></td>
 <td>Eu, como gerente, quero ser capaz de adicionar um novo produto ao catálogo, para atualizar o estoque.</td>
 </tr>
@@ -723,31 +733,23 @@
 </tr>
 <tr>
 <td><b>[US08]</b></td>
-<td>Eu, como gerente, quero ser capaz de visualizar o estoque total da loja em tempo real, para ter uma visão atualizada sobre os produtos.</td>
-</tr>
-<tr>
-<td><b>[US09]</b></td>
 <td>Eu, como usuário, quero ser capaz de cadastrar clientes devedores no sistema, para acompanhar as pendências de pagamento.</td>
 </tr>
 <tr>
 <td><b>[US10]</b></td>
-<td>Eu, como usuário, quero ser capaz de alterar a dívida de um cliente existente, para atualizar as pendências.</td>
-</tr>
-<tr>
-<td><b>[US11]</b></td>
 <td>Eu, como funcionário, quero ser capaz de adicionar um pedido de venda, para efetuar a compra.</td>
 </tr>
 <tr>
-<td><b>[US12]</b></td>
-<td>Eu, como funcionário, quero adicionar ao pedido em aberto, diferentes produtos, utilizando código reservado a cada produto, para adicionar os itens corretos.</td>
+<td><b>[US11]</b></td>
+<td>Eu, como funcionário, quero ser capaz de finalizar a compra, para registrar a venda.</td>
 </tr>
 <tr>
-<td><b>[US13]</b></td>
-<td>Eu, como funcionário, quero ser capaz de escolher a forma de pagamento que foi realizada, para registrar a transação corretamente.</td>
+<td><b>[US06]</b></td>
+<td>Eu, como gerente, gostaria de receber uma notificação de estoque baixo, para poder repor o produto.</td>
 </tr>
 <tr>
-<td><b>[US14]</b></td>
-<td>Eu, como funcionário, quero ser capaz de escolher qual o tipo da entrega do pedido, para ser identificado o tipo da entrega.</td>
+<td><b>[US09]</b></td>
+<td>Eu, como usuário, quero ser capaz de alterar a dívida de um cliente existente, para atualizar as pendências.</td>
 </tr>
 </tbody>
 </table>
@@ -764,52 +766,44 @@
 </thead>
 <tbody>
 <tr>
-<td><b>[US05]</b></td>
-<td>Eu, como gerente, gostaria de adicionar promoções, para estimular as vendas.</td>
-</tr>
-<tr>
-<td><b>[US07]</b></td>
-<td>Eu, como gerente, gostaria de receber uma notificação de estoque baixo, para poder repor o produto.</td>
-</tr>
-<tr>
 <td><b>[US15]</b></td>
-<td>Eu, como funcionário, quero que o valor recebido em dinheiro seja exibido, para que apareça o troco.</td>
-</tr>
-<tr>
-<td><b>[US16]</b></td>
-<td>Eu, como gerente, quero ser capaz de gerar um gráfico de linhas, para monitorar melhor o fluxo de vendas de produtos específicos e identificar tendências e padrões.</td>
-</tr>
-<tr>
-<td><b>[US17]</b></td>
-<td>Eu, como gerente, quero ser capaz de gerar um gráfico de pizza, para identificar a participação de cada categoria nas vendas totais.</td>
-</tr>
-<tr>
-<td><b>[US18]</b></td>
-<td>Eu, como gerente, quero ser capaz de gerar um gráfico de barras, para comparar as vendas de diferentes produtos.</td>
-</tr>
-<tr>
-<td><b>[US19]</b></td>
 <td>Eu, como gerente, quero ser capaz de gerar um relatório, para identificar o desempenho das vendas.</td>
 </tr>
 <tr>
-<td><b>[US21]</b></td>
-<td>Eu, como gerente, quero ser capaz de adicionar um novo funcionário ao sistema, para manter o registro atual dos funcionários.</td>
-</tr>
-<tr>
-<td><b>[US22]</b></td>
-<td>Eu, como gerente, quero ser capaz de remover um funcionário do sistema, para manter a integridade do sistema.</td>
-</tr>
-<tr>
-<td><b>[US20]</b></td>
+<td><b>[US16]</b></td>
 <td>Eu, como gerente, quero ser capaz de gerar uma lista com todas as vendas já realizadas, para manter registro completo.</td>
 </tr>
 <tr>
-<td><b>[US23]</b></td>
+<td><b>[US17]</b></td>
+<td>Eu, como gerente, quero ser capaz de adicionar um novo funcionário ao sistema, para manter o registro atual dos funcionários.</td>
+</tr>
+<tr>
+<td><b>[US20]</b></td>
+<td>Eu, como gerente, quero ser capaz de visualizar as informações pessoais dos funcionários, para manter o registro atualizado.</td>
+</tr>
+<tr>
+<td><b>[US12]</b></td>
+<td>Eu, como gerente, quero ser capaz de gerar um gráfico de linhas, para monitorar melhor o fluxo de vendas de produtos específicos e identificar tendências e padrões.</td>
+</tr>
+<tr>
+<td><b>[US13]</b></td>
+<td>Eu, como gerente, quero ser capaz de gerar um gráfico de pizza, para identificar a participação de cada categoria nas vendas totais.</td>
+</tr>
+<tr>
+<td><b>[US14]</b></td>
+<td>Eu, como gerente, quero ser capaz de gerar um gráfico de barras, para comparar as vendas de diferentes produtos.</td>
+</tr>
+<tr>
+<td><b>[US18]</b></td>
+<td>Eu, como gerente, quero ser capaz de remover um funcionário do sistema, para manter a integridade do sistema.</td>
+</tr>
+<tr>
+<td><b>[US19]</b></td>
 <td>Eu, como gerente, quero ser capaz de editar as informações de um funcionário existente, para atualizar com novas informações.</td>
 </tr>
 <tr>
-<td><b>[US24]</b></td>
-<td>Eu, como gerente, quero ser capaz de visualizar as informações pessoais dos funcionários, para manter o registro atualizado.</td>
+<td><b>[US05]</b></td>
+<td>Eu, como gerente, gostaria de adicionar promoções, para estimular as vendas.</td>
 </tr>
 </tbody>
 </table>
