--- a/site/sprint4/index.html
+++ b/site/sprint4/index.html
@@ -709,10 +709,30 @@
                   
 
 
-<p>Data       Versão | Descrição            | Autor(es)                                                   |
-| ---------- | ------ | -------------------- | ------------------------------------------------------------ |
-| 18/05/2023 | 0.1 | Criação e estruturação do documentação da sprint 4 | Hemanoel, Gustavo, Isaac |
-| 05/06/2023 | 0.2 | Atualização da documentação da sprint 4 | Daniela, Gustavo,Hemanoel, Isaac, Milena |</p>
+<table>
+<thead>
+<tr>
+<th>Data      </th>
+<th>Versão</th>
+<th>Descrição            </th>
+<th>Autor(es)                                                  </th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>18/05/2023</td>
+<td>0.1</td>
+<td>Criação e estruturação do documentação da sprint 4</td>
+<td>Hemanoel, Gustavo, Isaac</td>
+</tr>
+<tr>
+<td>05/06/2023</td>
+<td>0.2</td>
+<td>Atualização da documentação da sprint 4</td>
+<td>Daniela, Gustavo,Hemanoel, Isaac, Milena</td>
+</tr>
+</tbody>
+</table>
 <h1 id="sprint-4">Sprint 4</h1>
 <p>Data início: 31/05/2023</p>
 <p>Data término: 13/06/2023</p>
