--- a/site/visao-geral-projeto/index.html
+++ b/site/visao-geral-projeto/index.html
@@ -740,6 +740,12 @@
 <td>Formulando organização do projeto, planejamento das fases, matriz de comunicação, gerenciamento de riscos e critérios de planejamento</td>
 <td>Hemanoel, Gustavo, Isaac, Daniela, Milena</td>
 </tr>
+<tr>
+<td>13/06/2023</td>
+<td>0.2</td>
+<td>Atualização do planejamento das Fases</td>
+<td>Hemanoel, Gustavo, Isaac</td>
+</tr>
 </tbody>
 </table>
 <h2 id="21-organizacao-do-projeto">2.1 Organização do projeto</h2>
@@ -816,7 +822,7 @@
 </tr>
 <tr>
 <td align="center">Sprint 4</td>
-<td>finalização do MVP1 <br>[US01];<br>[US02];<br>[US03];<br>[US04] <b>[US07]</b>, <b>[US08]</b>,<b>[US10]</b>,<b>[US11]</b>,<b>[US06]</b>,<b>[US09]</b></td>
+<td>Finalização do MVP1 <br>[US01];<br>[US02];<br>[US03];<br>[US04];<br>[US07];<br>[US08];<br>[US10];<br>[US11];<br>[US06];<br>[US09];</td>
 <td>31/05/2023</td>
 <td>14/06/2023</td>
 </tr>
