mudando estetica da sprint4

--- a/site/sprint4/index.html
+++ b/site/sprint4/index.html
@@ -825,7 +825,7 @@
 </ul>
 <h2 id="sprint-review">Sprint Review</h2>
 <div style="text-align: justify"> 
-Feedback do cliente consistiu em como ela queria que fosse realizados as histórias pendentes do MVP1, além de achar o produto atual bom e intuitivo.
+"O feedback do cliente consistiu em como ela queria que as histórias pendentes do MVP1 fossem realizadas, além de achar o produto atual bom e intuitivo. Isso posto e com base no feedback recebido e nas discussões da revisão, o cliente está alinhado, por enquanto, com as histórias implementadas e com o que foi planejado para a implementação das histórias pendentes. Caso necessário, atualizaremos o backlog do produto com requisitos que podem vir a aparecer de acordo com os próximos feedbacks.
 
 </div>
 
@@ -835,11 +835,11 @@ Após discussão e análise, identificamos alguns aspectos positivos que contrib
 </div>
 
 <div style="text-align: justify"> 
-No entanto, também enfrentamos algumas limitações que impactaram nosso desempenho. Enfrentamos problemas de comunicação,obstáculos durante o desenvolvimento e dificuldades na distribuição das tarefas. Assim como melhorias para próxima sprint, além dos aspectos de softskills seriam a conclusão das histórias US10,US11 e US06 por ser algo mais difícil de ser feito, estamos nos empenhando para compreender como fazer para implementar no nosso site.Estamos confiantes de que com esses erros identificados realizaremos a próxima sprint de forma mais eficaz, obtendo resultados ainda melhores.
+No entanto, também enfrentamos algumas limitações que impactaram nosso desempenho. Enfrentamos problemas de comunicação,obstáculos durante o desenvolvimento e dificuldades na distribuição das tarefas. Assim como melhorias para próxima sprint, além dos aspectos de softskills seriam a conclusão das histórias <b>[US10]</b>,<b>[US11]</b> e <b>[US06]</b> por ser algo mais difícil de ser feito, estamos nos empenhando para compreender como fazer para implementar no nosso site.Estamos confiantes de que com esses erros identificados realizaremos a próxima sprint de forma mais eficaz, obtendo resultados ainda melhores.
 </div>
 
 <h3 id="historias-completas">Histórias Completas</h3>
-<p>Durante a unidade 3, conseguimos completar as seguintes histórias ,em resumo, do MVP1:</p>
+<p>Durante a sprint 4, conseguimos completar as seguintes histórias ,em resumo, do MVP1:</p>
 <p><b>Finalizamos os débitos técnicos da sprint 3:</b></p>
 <p><b>[US01]</b> Consultar o preço do produto.</p>
 <p><b>[US02]</b> Consultar o nível de estoque dos produtos.</p>
@@ -853,9 +853,9 @@ No entanto, também enfrentamos algumas limitações que impactaram nosso desemp
 <p>Na sprint 4, o desenvolvimento das histórias a baixo são as que a equipe encontrou dificuldades técnicas não conseguindo cumprir com o tempo designado da sprint.</p>
 <p><b>[US10]</b> Adicionar um pedido de venda.</p>
 <p><b>[US11]</b> Finalizar a compra.</p>
-<p><b>[US06]</b> Receber uma notificação de estoque baixo</p>
+<p><b>[US06]</b> Receber uma notificação de estoque baixo.</p>
 <h3 id="praticas-utilizadas">Práticas utilizadas</h3>
-<p>Durante a unidade 3, foram utilizadas o projeto simples, a integração contínua, a posse coletiva, a padronização do código, os small releases e a programação em pares. Porém, não utilizamos a refatoração e os testes unitários mas estão previstos para o próximo sprint. </p>
+<p>Durante a sprint 4, foram utilizadas o projeto simples, a integração contínua, a posse coletiva, os small releases e a programação em pares. Porém, não utilizamos a refatoração,a padronização do código, e os testes unitários mas estão previstos para o próximo sprint. </p>
 <p><b> Pair Programming realizado nessa Sprint </b></p>
 <table>
 <thead>
