--- a/site/teste/index.html
+++ b/site/teste/index.html
@@ -739,15 +739,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Funcional, <br> Usabilidade.</td>
-<td>Unitário, <br> Integração, <br> Aceitação.</td>
+<td>Funcional</td>
+<td>Unitário</td>
 <td>Manual</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Funcional, <br> Usabilidade, <br> Eficiência, <br> Teste de interface, <br> Teste de segurança</td>
-<td>Unitário, <br> Integração, <br> Sistema, <br> Aceitação.</td>
-<td>Caixa Preta,<br>Manual, <br> Automática.</td>
+<td>Funcional</td>
+<td>Unitário</td>
+<td>Manual</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Usabilidade</td>
+<td>Unitário</td>
+<td>Automática</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Eficiência</td>
+<td>Sistema</td>
+<td>Caixa Preta</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Teste de segurança</td>
+<td>Unitário</td>
+<td>Automática</td>
 </tr>
 </tbody>
 </table>
