--- a/site/teste/index.html
+++ b/site/teste/index.html
@@ -721,8 +721,14 @@
 <tr>
 <td>26/06/2023</td>
 <td>0.3</td>
-<td>Atualização da documentação da sprint 3</td>
+<td>Atualização da documentação dos testes</td>
 <td>Daniela, Hemanoel, Milena</td>
+</tr>
+<tr>
+<td>13/07/2023</td>
+<td>0.4</td>
+<td>Atualização da documentação dos testes</td>
+<td>Daniela, Hemanoel</td>
 </tr>
 </tbody>
 </table>
@@ -730,42 +736,46 @@
 <table>
 <thead>
 <tr>
-<th>MVP</th>
+<th>Escopo</th>
 <th>Tipos de Teste</th>
 <th>Níveis de Teste</th>
 <th>Técnicas de Testes</th>
+<th>Objetivos</th>
+<th>Perspectiva</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>1</td>
+<td>MVP1/MVP2</td>
 <td>Funcional</td>
 <td>Unitário</td>
-<td>Manual</td>
+<td>Automatico</td>
+<td>Qualidade Interna</td>
+<td>Técnica</td>
 </tr>
 <tr>
-<td>2</td>
-<td>Funcional</td>
-<td>Unitário</td>
-<td>Manual</td>
-</tr>
-<tr>
-<td>2</td>
+<td>MVP1/MVP2</td>
 <td>Usabilidade</td>
 <td>Unitário</td>
-<td>Automática</td>
+<td>Manual</td>
+<td>Qualidade Externa</td>
+<td>Negócio</td>
 </tr>
 <tr>
-<td>2</td>
+<td>MVP1/MVP2</td>
 <td>Eficiência</td>
 <td>Sistema</td>
-<td>Caixa Preta</td>
+<td>Manual</td>
+<td>Qualidade Externa</td>
+<td>Técnica</td>
 </tr>
 <tr>
-<td>2</td>
+<td>MVP2</td>
 <td>Teste de segurança</td>
 <td>Unitário</td>
 <td>Automática</td>
+<td>Qualidade Interna</td>
+<td>Técnica</td>
 </tr>
 </tbody>
 </table>
